<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/frameLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/transparent"
    android:orientation="vertical"
    android:paddingLeft="20dp"
    android:paddingTop="25dp"
    android:paddingRight="20dp"
    android:paddingBottom="30dp"
    app:layout_behavior="@string/bottom_sheet_behavior"
    tools:context=".views.ModalSheetBottomFragment">

    <ImageView
        android:id="@+id/imageView5"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="25dp"
        android:src="@drawable/ic_rectangel" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/title_editText"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="15dp"
        android:hint="@string/title_hint_editText">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/title_editText_input"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

    </com.google.android.material.textfield.TextInputLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="15dp"
        android:orientation="horizontal">

        <ImageView
            android:id="@+id/imageView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="9dp"
            android:src="@drawable/ic_align_left" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/outlinedTextField"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/label">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/details_editText"
                android:layout_width="match_parent"
                android:layout_height="110dp"
                android:gravity="start" />

        </com.google.android.material.textfield.TextInputLayout>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="15dp"
        android:orientation="horizontal">

        <ImageView
            android:id="@+id/imageView2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="9dp"
            android:src="@drawable/ic_calendar" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/due_date_editText"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/due_date_edit_text_label">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/details_editText2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

        </com.google.android.material.textfield.TextInputLayout>
    </LinearLayout>

    <Button
        android:id="@+id/containedButton"
        android:layout_width="match_parent"
        android:layout_height="55dp"
        android:backgroundTint="@color/primary_color"
        android:text="@string/add_todo_btn"
        android:textColor="@color/white" />

    <Button
        android:id="@+id/textButton"
        style="@style/Widget.MaterialComponents.Button.TextButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:text="@string/cancel_btn"
        android:textColor="@color/primary_color" />

</LinearLayout>